results/SVCOMP/4-shot/log-if_expr1-2024_03_19_00_50_25.txt
class if_expr1 {
    //@ requires x == 10 || x != 10;
    //@ ensures x == 10 ==> \result <==> y == 11;
    //@ ensures x != 10 ==> \result <==> y == 9;
    public static boolean main(int x) {
        int y = x == 10 ? 11 : 9;
        if (x == 10) return y == 11;
        else return y == 9;
    }
}
/home/max/Documents/JMLGPT/tmp/if_expr1.java:3: error: cannot find symbol
    //@ ensures x == 10 ==> \result <==> y == 11;
                                         ^
  symbol:   variable y
  location: class if_expr1
/home/max/Documents/JMLGPT/tmp/if_expr1.java:4: error: cannot find symbol
    //@ ensures x != 10 ==> \result <==> y == 9;
                                         ^
  symbol:   variable y
  location: class if_expr1
2 errors

